--- a/css/categories.css
+++ b/css/categories.css
@@ -1,13 +1,31 @@
 .list-categories {
     padding: 0 15px;
 }
-
+input[type="date"] {
+    padding: 2px 16px;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    box-shadow: 1px 1px 1px black inset;
+    background: #fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png) 87% 50% no-repeat;
+    width: 179px;
+    outline: none;
+}
+input[type="date"]::-webkit-inner-spin-button {
+  display: none;
+}
+input[type="date"]::-webkit-calendar-picker-indicator {
+  opacity: 0;
+}
 .list-categories__title {
     background: #159894;
     border-radius: 4px;
     padding: 11px 12px;
     font-weight: bold;
     color: #fff;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
 }
 .list-categories__title i.fas.fa-bars {
     margin-right: 12px;
@@ -30,6 +48,7 @@
 .list-categories__box {
     padding: 15px 0;
     border-bottom: 1px dotted;
+    display: flex;
 }
 .list-categories__box:last-child {
     border-bottom: transparent;
@@ -39,7 +58,6 @@
 }
 
 .list-categories__box img {
-    float: left;
     width: 131px;
     margin-right: 15px;
     border-radius: 2px;
@@ -92,11 +110,24 @@
 .list-categories__box .information-date small {
     margin-right: 5px;
 }
-
-
-@media only screen and (max-width:476px)
+@media only screen and (max-width:400px)
 {
-	.list-categories {
-	    padding: 15px;
-	}
+    .list-categories__title>div {
+        margin-bottom: 10px;
+    }
+}
+@media only screen and (max-width:500px)
+{
+    .list-categories {
+        padding: 15px;
+    }
+
+    .list-categories__box img {
+        width: 100%;
+    }
+
+    .list-categories__box {
+        display: block;
+        padding: 20px 0;
+    }
 }
